# perso-2025b-julio-mansan2

./: Main.hs  README.md  TestMain.hs  perso-2025b-julio-mansan2.cabal
.devcontainer/: devcontainer.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
static/: index.html  quiz.html  script.js  styles.css
